# pkg/docs/rototiller/swagger.json
@@ -15,133 +15,6 @@
     },
     "host": "rototiller.logsquaredn.io",
     "paths": {
-        "/api.storage.v1.StorageService/CreateStorage": {
-            "post": {
-                "security": [
-                    {
-                        "ApiKeyAuth": []
-                    }
-                ],
-                "description": "RPC Stores a dataset. The ID of this stored dataset can be used as input to jobs",
-                "consumes": [
-                    "application/json",
-                    " application/zip"
-                ],
-                "produces": [
-                    "application/json"
-                ],
-                "tags": [
-                    "Storage"
-                ],
-                "summary": "RPC Create a storage",
-                "parameters": [
-                    {
-                        "type": "string",
-                        "description": "Content type to be stored",
-                        "name": "X-Content-Type",
-                        "in": "header",
-                        "required": true
-                    }
-                ],
-                "responses": {
-                    "16": {
-                        "description": "",
-                        "schema": {
-                            "$ref": "#/definitions/rototiller.Error"
-                        }
-                    },
-                    "2": {
-                        "description": "",
-                        "schema": {
-                            "$ref": "#/definitions/rototiller.Error"
-                        }
-                    },
-                    "5": {
-                        "description": "",
-                        "schema": {
-                            "$ref": "#/definitions/rototiller.Error"
-                        }
-                    }
-                }
-            }
-        },
-        "/api.storage.v1.StorageService/GetStorage": {
-            "post": {
-                "security": [
-                    {
-                        "ApiKeyAuth": []
-                    }
-                ],
-                "description": "RPC Get the metadata of a stored dataset",
-                "produces": [
-                    "application/json"
-                ],
-                "tags": [
-                    "Storage"
-                ],
-                "summary": "RPC Get a storage",
-                "responses": {
-                    "16": {
-                        "description": "",
-                        "schema": {
-                            "$ref": "#/definitions/rototiller.Error"
-                        }
-                    },
-                    "2": {
-                        "description": "",
-                        "schema": {
-                            "$ref": "#/definitions/rototiller.Error"
-                        }
-                    },
-                    "5": {
-                        "description": "",
-                        "schema": {
-                            "$ref": "#/definitions/rototiller.Error"
-                        }
-                    }
-                }
-            }
-        },
-        "/api.storage.v1.StorageService/GetStorageContent": {
-            "post": {
-                "security": [
-                    {
-                        "ApiKeyAuth": []
-                    }
-                ],
-                "description": "RPC Gets the content of a stored dataset",
-                "produces": [
-                    "application/json",
-                    " application/zip"
-                ],
-                "tags": [
-                    "Content"
-                ],
-                "summary": "RPC Get a storage's content",
-                "parameters": [
-                    {
-                        "type": "string",
-                        "description": "Request results as a Zip or JSON. Default Zip",
-                        "name": "Accept",
-                        "in": "header"
-                    }
-                ],
-                "responses": {
-                    "16": {
-                        "description": "",
-                        "schema": {
-                            "$ref": "#/definitions/rototiller.Error"
-                        }
-                    },
-                    "2": {
-                        "description": "",
-                        "schema": {
-                            "$ref": "#/definitions/rototiller.Error"
-                        }
-                    }
-                }
-            }
-        },
         "/api/v1/jobs": {
             "get": {
                 "security": [
